--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-
+/* nav bar */
 nav {
    display: flex;
    flex-direction: row;
@@ -10,12 +10,6 @@ nav {
 .webIcon {
    height: 50px;
    width: 50px;
-}
-
-.row {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
 }
 
 .searchBar {
@@ -47,3 +41,62 @@ button {
    border: none;
 }
 
+/* general */
+.row {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   padding: 6px;
+}
+.row > *{ /*space between children in row*/
+   margin: 6px;
+}
+
+.column {
+   display: flex;
+   flex-direction: column;
+   /* align-items: center; */
+   margin: 10px;
+   padding: 6px;
+}
+.column > *{
+   margin: 2px;
+}
+
+body {
+   display: flex;
+   flex-direction: column;
+   /* justify-content: space-between; */
+   /* align-items: center; */
+   margin: 6px;
+}
+
+/* game cards */
+
+.gameCard {
+   width: 200px;
+   height: 250px;
+   display: flex;
+   flex-direction: column;
+}
+
+.gameImage {
+   width: inherit;
+   height: 50%;
+}
+
+.cardRow {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   /* padding: 6px; */
+   border: 1px;
+   border-style: solid;
+}
+.cardRow > *{ /*space between children in row*/
+   margin-right: 40px;
+}
+
+#padding {
+   /* padding: 20px; */
+}
