--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,67 @@ nav {
    margin: 6px;
 } 
 
+/* ham mneu */
+
+.offscreen {
+   background-color: white;
+   width: 15%;
+   height: 15%;
+   position: fixed;
+   top: 10%;
+   left: -450px;
+   list-style-type: none;
+   border: 1px;
+   border-style: solid;
+}
+.offscreen li {
+   margin: 4px;
+}
+.offscreen ul {
+   list-style-type: none;
+}
+.offscreen.active {
+   left: 1.5%;
+}
+
+.ham-menu {
+   height: 50px;
+   width: 50px;
+   /* margin-right: auto; */
+   position: relative;
+   align-items: center;
+   /* border: 1px;
+   border-style: solid; */
+}
+.ham-menu span {
+   height: 2.5px;
+   width: 80%;
+   background-color: black;
+   border-radius: 20px;
+   position: absolute;
+   top: 50%;
+   /* left: 50%;  */
+   translate: translate(-50%, -50%);
+   transition: .3s ease;
+}
+.ham-menu span:nth-child(1) {
+   top: 25%;
+}
+.ham-menu span:nth-child(3) {
+   top: 75%;
+}
+.ham-menu.active span:nth-child(1) {
+   top: 50%;
+   transform: translate(-50%, -50%) rotate(45deg);
+}
+.ham-menu.active span:nth-child(2) {
+   opacity: 0;
+}
+.ham-menu.active span:nth-child(3) {
+   top: 50%;
+   transform: translate(-50%, -50%) rotate(-45deg);
+}
+
 .webIcon {
    height: 50px;
    width: 50px;
