--- a/styles/global.css
+++ b/styles/global.css
@@ -33,11 +33,11 @@ nav {
 .ham-menu {
    height: 50px;
    width: 50px;
-   /* margin-right: auto; */
+   /* margin-left: auto; */
    position: relative;
-   align-items: center;
-   /* border: 1px;
-   border-style: solid; */
+   /* align-items: center; */
+   border: 1px;
+   border-style: solid;
 }
 .ham-menu span {
    height: 2.5px;
@@ -58,14 +58,14 @@ nav {
 }
 .ham-menu.active span:nth-child(1) {
    top: 50%;
-   transform: translate(-50%, -50%) rotate(45deg);
+   transform: translate(0%, -50%) rotate(45deg);
 }
 .ham-menu.active span:nth-child(2) {
    opacity: 0;
 }
 .ham-menu.active span:nth-child(3) {
    top: 50%;
-   transform: translate(-50%, -50%) rotate(-45deg);
+   transform: translate(0%, -50%) rotate(-45deg);
 }
 
 .webIcon {
@@ -85,6 +85,10 @@ nav {
    border-color: black;
    border-style: solid;
    border-radius: 10px;
+}
+
+.navSearch {
+   height: 100%;
 }
 
 input {
@@ -124,13 +128,21 @@ button {
    margin: 2px;
 }
 
-body {
+.contain {
    display: flex;
    flex-direction: column;
    /* justify-content: space-between; */
    /* align-items: center; */
    margin: 6px;
 }
+
+/* body {
+   display: flex;
+   flex-direction: column; */
+   /* justify-content: space-between; */
+   /* align-items: center; */
+   /* margin: 6px; */
+/* } */
 
 /* game cards */
 
@@ -151,8 +163,8 @@ body {
    flex-direction: row;
    align-items: center;
    /* padding: 6px; */
-   border: 1px;
-   border-style: solid;
+   /* border: 1px;
+   border-style: solid; */
 }
 .cardRow > *{ /*space between children in row*/
    margin-right: 40px;
