--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,8 @@
 /* nav bar */
+
 nav {
    display: flex;
+   height: 80px;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
@@ -17,8 +19,8 @@ nav {
    top: 10%;
    left: -450px;
    list-style-type: none;
-   border: 1px;
-   border-style: solid;
+   /* border: 1px;
+   border-style: solid; */
 }
 .offscreen li {
    margin: 4px;
@@ -36,8 +38,6 @@ nav {
    /* margin-left: auto; */
    position: relative;
    /* align-items: center; */
-   border: 1px;
-   border-style: solid;
 }
 .ham-menu span {
    height: 2.5px;
@@ -75,16 +75,19 @@ nav {
 
 .searchBar {
    height: 20px;
-   width: 200px;
+   width: 300px;
    display: flex;
    flex-direction: row;
-   justify-content: space-around;
+   justify-content: space-between;
    align-items: center;
    padding: 6px;
    border: 1px;
    border-color: black;
    border-style: solid;
    border-radius: 10px;
+}
+.searchBar > input {
+   width: 90%;
 }
 
 .navSearch {
@@ -95,7 +98,7 @@ input {
    border: none;
 }
 .searchIcon {
-   width: 100%;
+   width: 1vw;
    height: 100%;
    background-color: none;
 }
@@ -107,6 +110,14 @@ button {
 }
 
 /* general */
+.line {
+   width: 90%;
+   align-self: center;
+   border: 1px;
+   border-style: solid;
+   border-color: rgb(183, 183, 183);
+}
+
 .row {
    display: flex;
    flex-direction: row;
@@ -136,13 +147,6 @@ button {
    margin: 6px;
 }
 
-/* body {
-   display: flex;
-   flex-direction: column; */
-   /* justify-content: space-between; */
-   /* align-items: center; */
-   /* margin: 6px; */
-/* } */
 
 /* game cards */
 
@@ -156,20 +160,38 @@ button {
 .gameImage {
    width: inherit;
    height: 50%;
+   border-top-left-radius: 10px;
+   border-top-right-radius: 10px;
 }
 
 .cardRow {
    display: flex;
    flex-direction: row;
    align-items: center;
+   overflow-x: scroll;
+   margin-bottom: 10px;
    /* padding: 6px; */
    /* border: 1px;
    border-style: solid; */
+}
+.cardRow::-webkit-scrollbar{
+   height: 5px;
+   color: rgb(194, 194, 194);
+}
+.cardRow::-webkit-scrollbar-track {
+   background: #f1f1f1;
+}
+.cardRow::-webkit-scrollbar-thumb {
+   background: #888;
+}
+.cardRow::-webkit-scrollbar-thumb:hover {
+   background: #555;
 }
 .cardRow > *{ /*space between children in row*/
    margin-right: 40px;
 }
 
-#padding {
-   /* padding: 20px; */
+.tags {
+   color: red;
 }
+
